<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        tools:context=".DetailActivity" >


        <TextView
            android:id="@+id/txtlbl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtlbl1_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl1_1" />

        <EditText
            android:id="@+id/txt1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl1_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl1_2" />

        <EditText
            android:id="@+id/txt1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl1_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl1_3" />

        <EditText
            android:id="@+id/txt1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtlbl2_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl2_1" />

        <EditText
            android:id="@+id/txt2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl2_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl2_2" />

        <EditText
            android:id="@+id/txt2_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl2_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl2_3" />

        <EditText
            android:id="@+id/txt2_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl3"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl4"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtlbl4_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl4_1" />

        <EditText
            android:id="@+id/txt4_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />

        <TextView
            android:id="@+id/txtlbl4_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtlbl4_2" />

        <EditText
            android:id="@+id/txt4_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:inputType="none"
            android:textColor="@android:color/holo_blue_bright" />
    </LinearLayout>

</ScrollView>